# hunger-game

./: .clang-format  .gitmodules  CMakeLists.txt  Hunger-Game.code-workspace  README.md
.github/workflows/: cmake-multi-platform.yml  super-linter.yml
hunger/inc/: food.h  hunger.h  player.h
hunger/src/: food.c  hunger.c  main.c  player.c
platform/inc/: collisions.h
platform/src/: collisions.c
